modified opensees post to handle shell layer results up to layer 99

--- a/post/OpenSeesPost.dproj
+++ b/post/OpenSeesPost.dproj
@@ -3,11 +3,11 @@
         <ProjectGuid>{3723C54A-DA82-42A4-84C8-2DDAE68CC2AC}</ProjectGuid>
         <MainSource>OpenSeesPost.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Console</AppType>
         <FrameworkType>None</FrameworkType>
-        <ProjectVersion>18.8</ProjectVersion>
+        <ProjectVersion>19.2</ProjectVersion>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
